# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("DownloadBaseNotifyFuzzTest") {
  module_out_path = "request/request"

  include_dirs = [
    "//base/request/request/download/interfaces/kits/js/napi/download_single/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/arkui/ace_engine/frameworks/base/utils",
    "//foundation/arkui/napi",
    "//foundation/arkui/napi/interfaces/kits",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//third_party/node/src",
    "//third_party/curl/include",
    "//foundation/ability/ability_runtime/services/common/include",
    "//utils/system/safwk/native/include",
    "//base/request/request/download/interfaces/innerkits/include",
    "//base/request/request/download/utils/include",
    "//foundation/ability/ability_runtime/interfaces/kits/native/appkit/app/include/",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native",
    "//foundation/ability/ability_runtime/interfaces/inner_api/base/include/ohos/aafwk/base",
    "//foundation/ability/ability_runtime/services/abilitymgr/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/want/include/ohos/aafwk/content",
    "//foundation/ability/ability_runtime/interfaces/inner_api/ability_manager/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/want/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/uri/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "downloadbasenotify_fuzzer.cpp" ]

  fuzz_config_file =
      "//base/request/request/test/fuzztest/downloadbasenotify_fuzzer"

  deps = [
    "//base/request/request/download/interfaces/kits/js/napi/download_single:downloadsingle",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-common",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/curl:curl",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DownloadBaseNotifyFuzzTest",
  ]
}
###############################################################################
