# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/request/request/request_aafwk.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("DownloadUploadManagerFuzzTest") {
  module_out_path = "request/request"

  include_dirs = [
    "${request_path}/frameworks/js/napi/include",
    "${request_path}/frameworks/native/include",
    "${arkui_path}/ace_engine/frameworks/base/utils",
    "//third_party/node/src",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "downloaduploadmanager_fuzzer.cpp" ]

  fuzz_config_file =
      "${request_path}/test/fuzztest/downloaduploadmanager_fuzzer"

  deps = [
    "${arkui_path}/napi:ace_napi",
    "${request_path}/common:request_common_static",
    "${request_path}/frameworks/js/napi:request_static",
    "${request_path}/frameworks/native:request_native",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DownloadUploadManagerFuzzTest",
  ]
}
###############################################################################
