# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/request/request/request_aafwk.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("PredownloadFuzzTest") {
  module_out_path = "request/request/request"
  fuzz_config_file = "../../../test/fuzztest/predownload_fuzzer"

  include_dirs = [
    "../../../frameworks/native/cache_download/include",
    "../../../common/include",
    "../../../common/utf8_utils/include",
    "../../../interfaces/inner_kits/cache_download/native/include",
    "${target_gen_dir}/../../../frameworks/native/cache_download/src",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "../../../frameworks/native/cache_download/src/cxx/preload_callback.cpp",
    "../../../frameworks/native/cache_download/src/cxx/request_preload.cpp",
    "predownload_fuzzer.cpp",
  ]
  sources += [ "${target_gen_dir}/../../../frameworks/native/cache_download/src/wrapper.rs.cc" ]

  deps = [
    "../../../frameworks/native/cache_download:preload_native_rust",
    "../../../frameworks/native/cache_download:preload_native_rust_gen",
    "../../../common/utf8_utils:request_utf8_utils",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "netstack:http_client",
    "rust_cxx:cxx_cppdeps",
    "rust_cxx:lib",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":PredownloadFuzzTest",
  ]
}
###############################################################################
