# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")

import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "request/upload_service"

ohos_unittest("upload_obtain_file_UT_test") {
  module_out_path = module_output_path

  include_dirs = [
    "include",
    "${request_path}/frameworks/native/upload/include",
    "//third_party/googletest/googlemock/include",
  ]

  sources = [
    "${request_path}/frameworks/native/upload/src/file_adapter.cpp",
    "${request_path}/frameworks/native/upload/src/obtain_file.cpp",
    "src/mock_obtain_file.cpp",
    "src/obtain_file_test.cpp",
  ]

  deps = [
    "${request_path}/common:request_common_static",
    "${request_path}/frameworks/native/upload:upload_lib",
    "//third_party/googletest:gmock_main",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

ohos_unittest("upload_UT_test") {
  module_out_path = module_output_path

  sources = [
    "${request_path}/frameworks/native/upload/src/curl_adp.cpp",
    "src/upload_test.cpp",
  ]

  include_dirs = [
    "include",
    "${request_path}/frameworks/native/upload/include",
    "//third_party/curl/include",
  ]

  deps = [
    "${request_path}/common:request_common_static",
    "${request_path}/frameworks/native/upload:upload_lib",
    "//third_party/curl:curl_shared",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]
}
