# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

config("upload_lib_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//third_party/curl/include",
    "//third_party/openssl/include",
  ]
  cflags_cc = [
    "-fno-exceptions",
    "-fvisibility-inlines-hidden",
    "-Os",
  ]
  cflags = [ "-DOPENSSL_ARM64_PLATFORM" ]
  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags += [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
    "-Os",
  ]
}

config("upload_lib_public_config") {
  visibility = []
  include_dirs = [
    "include",
    "//third_party/curl/include",
    "//third_party/openssl/include",
    "./",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
  ]
}

ohos_shared_library("upload_lib") {
  sources = [
    "src/curl_adp.cpp",
    "src/file_adapter.cpp",
    "src/module_init.cpp",
    "src/obtain_file.cpp",
    "src/upload_task.cpp",
  ]
  include_dirs = [
    "//third_party/curl/include",
    "//third_party/openssl/include",
  ]

  configs = [ ":upload_lib_config" ]
  version_script = "libupload_lib.map"
  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "${ability_runtime_path}/frameworks/native/ability/native:data_ability_helper",
    "//third_party/curl:curl_shared",
    "//third_party/openssl:libcrypto_shared",
    "//third_party/openssl:libssl_shared",
  ]

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]

  public_configs = [ ":upload_lib_public_config" ]
  subsystem_name = "request"
  part_name = "request"
}
