# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
rust_cxx("test_dir_op_rust_gen") {
  sources = [ "src/wrapper.rs" ]
}

ohos_rust_static_ffi("dir_operation_rust") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "src/lib.rs" ]

  external_deps = [
    "rust_cxx:lib",
  ]

  subsystem_name = "request"
  part_name = "request"
}

config("dir_opration_config") {
  include_dirs = [
    "include",
    "${target_gen_dir}/src",
  ]
}

ohos_static_library("common_dir_op") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "src/cxx/dir_operations.cpp",
  ]

  sources += get_target_outputs(":test_dir_op_rust_gen")
  
  deps = [
    ":dir_operation_rust",
    ":test_dir_op_rust_gen",
  ]

  public_configs = [ ":dir_opration_config" ]

  external_deps = [
    "rust_cxx:cxx_cppdeps",
  ]

  subsystem_name = "request"
  part_name = "request"
}
